@@ -68,6 +68,8 @@ Library
 
 - os.path.walk is deprecated in favor of os.walk.
 
+- pdb gained the "until" command
+
 Build
 -----
 
